# rfcounting_intree

./: .gitignore  .gitmodules  2mm_ProgramHeat.csv  3mm_ProgramHeat.csv  AlphaFloatBig.xml  AlphaIntBig.xml  CFG.csv  CompiledFiles.txt  CritPath.csv  DAG.csv  DOCS.md  HeatData.csv  HeatDataBaseline.csv  MBB_stats.csv  PathBlocks.csv  PathCFG.csv  PathRoots.csv  PerBlockAdditional.csv  README.md  RegisterAccessPreRAPass_backup.cpp  RegisterAccessPreRAPass_backup.h  TopoComp.csv  VoltageFrequency.csv  VoltageFrequencyBaseline.csv  VoltageLevels.csv  a.txt  adi_ProgramHeat.csv  analyse_instructions.py  analyse_instructions_pairs.txt  atax_ProgramHeat.csv  build_polybench_binaries.sh  buildpoly.sh  buildpoly_specific.sh  buildscript.sh  buildtest.sh  compare_stats.py  compileout.txt  convert_stat_files.sh  covariance_ProgramHeat.csv  durbin_ProgramHeat.csv  (+53 more)
McPAT_monolithic/: README_McPAT_monolithic.docx  README~  array.cc  basic_components.cc  core.cc  iocontrollers.cc  logic.cc  mcpat  mcpat.mk  noc.cc  processor.cc  sharedcache.cc  version.h  xmlParser.cc  xmlParser.h
accuracy_summary/: atax_accuracy_summary.txt  gemm_accuracy_summary.txt
block_heats/: 2mm_Baseline_ProgramHeat.csv  2mm_OutVoltages.csv  2mm_ProgramHeat.csv  2mm_ProgramHeatVoltages.csv  (+74 more)
out_tree_pass/: CMakeLists.txt  buildsimpass.sh  merged  runfiles.sh
out_tree_pass/.cache/clangd/index/: SimCommandsPass.cpp.78CB2A0CBB9A18F7.idx  SimCommandsPass.h.5C0380C39BEB637C.idx
out_tree_pass/include/: SimCommandsPass.h
out_tree_pass/lib/: SimCommandsPass.cpp
out_tree_pass/test/: sim_api.h  simple.c
(+494 files in other folders)
